# simulation_supervised

./: .gitignore  README.md
simulation_supervised/: CMakeLists.txt  README  README.md  commands  package.xml  tmp_log
simulation_supervised/config/: ardrone.yaml  ardrone_real.yaml  bebop_real.yaml  bigben.yaml  bigben_direct.yaml  bigben_turtlebot.yaml  data_param.yaml  debug_param.yaml  online_param.yaml  ps3.yaml  sim_drone.yaml  sim_turtle.yaml  turtle_param.yaml  turtlebot.yaml
simulation_supervised/config/console/: bigben.yaml  bigben_turtlebot.yaml  complex_console.yaml  direct_console.yaml  drone_console.yaml  (+1 more)
simulation_supervised/etc/: param_list.txt
simulation_supervised/launch/: load_params.launch  test_hector.launch
simulation_supervised/python/: LLL_train_params.yaml  LLL_train_params_0001.yaml  LLL_train_params_001.yaml  LLL_train_params_10.yaml  LLL_train_params_10_0001.yaml  LLL_train_params_10_001.yaml  LLL_train_params_60.yaml  LLL_train_params_RA.yaml  LLL_train_params_debug.yaml  LLL_train_params_hard_real.yaml  LLL_train_params_hard_real_FT.yaml  LLL_train_params_hard_real_lambda1.yaml  LLL_train_params_hard_real_lambda10.yaml  LLL_train_params_hard_real_lambda5.yaml  LLL_train_params_hard_replay.yaml  LLL_train_params_hard_replay10_peak_1_real.yaml  LLL_train_params_hard_replay1_lr005.yaml  LLL_train_params_hard_replay1_lr005_real.yaml  LLL_train_params_hard_replay2_lr0005.yaml  LLL_train_params_hard_replay2_lr0005_real.yaml  LLL_train_params_hard_replay3_bs60.yaml  LLL_train_params_hard_replay3_bs60_real.yaml  LLL_train_params_hard_replay4_bs100.yaml  LLL_train_params_hard_replay4_bs100_real.yaml  LLL_train_params_hard_replay5_lambda5_real.yaml  LLL_train_params_hard_replay6_lambda1.yaml  LLL_train_params_hard_replay7_window_5_real.yaml  LLL_train_params_hard_replay8_window_10.yaml  LLL_train_params_hard_replay9_peak_09.yaml  LLL_train_params_old.yaml  cont_slow.yaml  demo_combined_sing  demo_empty_sing  demo_net  demo_test_empty_corridor  demo_test_full_corridor  dummy.sh  eva_params.yaml  eva_params_no_break_and_turn.yaml  eva_params_slow.yaml  (+17 more)
simulation_supervised/scripts/: create_data.sh  create_data_real.sh  create_data_turtle.sh  create_data_turtle_real.sh  evaluate_model.sh  evaluate_model_canyon.sh  evaluate_model_forest.sh  evaluate_model_forest_real.sh  evaluate_model_mix.sh  evaluate_model_turtle.sh  fly_in_simulation.sh  run_bebop.sh  run_bebop_from_bag.sh  start_python.sh  start_python_docker.sh  start_python_sing.sh  start_python_sing_gtdepth.sh  start_python_sing_ql.sh  test_before_launch.sh  test_function.sh  test_worlds.sh  tmp.sh  train_and_evaluate_model.sh  train_and_evaluate_model_debug.sh  train_and_evaluate_model_esat.sh  train_and_evaluate_model_old.sh  train_model.sh  train_model_alienware.sh  train_model_canyon.sh  train_model_forest.sh  train_model_sandbox.sh  train_model_turtle.sh
simulation_supervised_control/: CMakeLists.txt  README  package.xml
simulation_supervised_control/include/: BehaviourArbitration.h  OUNoise.h
simulation_supervised_control/launch/: behaviorarbitration.launch
simulation_supervised_control/parameters/: README  behavior_arbitration.xml  behavior_arbitration_forest.xml  behavior_arbitration_no_goal.xml  behavior_arbitration_no_goal_old.xml  behavior_arbitration_old.xml  behavior_arbitration_sandbox.xml  turtle_canyon.yaml  turtle_forest.yaml
simulation_supervised_control/python/: behavior_arbitration.py  depth_heuristic.py  drive_back.py
simulation_supervised_control/src/: BehaviourArbitration.cpp  OUNoise.cpp  teleop_autopilot_behaviour_arbitration.cpp  test_ounoise.cpp
simulation_supervised_demo/: CMakeLists.txt  README.md  package.xml
simulation_supervised_demo/launch/: README  bebop_real.launch  bebop_real_data.launch  canyon.launch  canyon_data.launch  canyon_debug.launch  canyon_joy.launch  canyon_turtle.launch  drone_real.launch  drone_sim.launch  esat_debug.launch  esat_v1.launch  esat_v1_joy.launch  esat_v2.launch  esat_v2_joy.launch  forest.launch  forest_joy.launch  forest_real.launch  forest_real_joy.launch  sandbox.launch  sandbox_000.launch  sandbox_001.launch  sandbox_002.launch  sandbox_003.launch  sandbox_004.launch  sandbox_005.launch  sandbox_006.launch  sandbox_007.launch  sandbox_008.launch  sandbox_009.launch  sandbox_joy.launch  turtle_real.launch  turtle_sim.launch  turtlebot.launch
simulation_supervised_demo/lights/: default_light  diffuse_light  directional_light  spot_light
simulation_supervised_demo/models/: README
simulation_supervised_demo/worlds/: README  blocked_hole_segment.world  canyon.world  canyon_blind_walls.world  corridor_5a.world  domain_A.world  domain_ABC.world  domain_ABC_smooth.world  domain_ABC_textured.world  domain_ABC_textured_black.world  domain_ABC_textured_shifted.world  domain_ABC_textured_smooth.world  domain_B.world  domain_C.world  empty_world.world  empty_world_with_wall.world  esat_corridor_v1.world  esat_v1.world  esat_v2.world  esatv1.world  esatv2.world  esatv3.world  esatv3_debug.world  forest.world  forest_real.world  maze.world  new.world  new.yaml  objects.world  osb.world  osb_blue.world  osb_carton_box.world  osb_yellow_barrel.world  osb_yellow_barrel_blue.world  round.world  sandbox.world  sandbox_000.world  sandbox_001.world  sandbox_002.world  sandbox_003.world  (+9 more)
simulation_supervised_tools/: CMakeLists.txt  README  README.md  package.xml
simulation_supervised_tools/etc/: models.txt  textures.txt
simulation_supervised_tools/launch/: create_data.launch  evaluate.launch  joy_teleop.launch  show_control.launch
simulation_supervised_tools/log/: log  log_named
simulation_supervised_tools/python/: README  canyon_generator.py  console_display.py  control_mapping.py  create_dataset.py  create_dataset_turtle.py  evaluate.py  evaluate.py~  forest_generator.py  fsm.py  ground_truth_listener.py  monitor.py  ou_noise.py  sandbox_generator.py  show_control.py  show_depth_prediction.py  show_odom_prediction.py  teleop_twist_keyboard.py  test_ounoise.py  viz_trajectories.py  viz_trajectories_offline.py
(+237 files in other folders)
