<?xml version="1.0"?>
<package>
  <name>simulation_supervised_tools</name>
  <version>0.0.0</version>
  <description>The simulation_supervised_tools package containing python scripts for evaluation, displaying control and depth estimation</description>
  <maintainer email="kkelchte@esat.kuleuven.be">Klaas Kelchtermans</maintainer>

  <license>BSD</license>

  <author email="kkelchte@esat.kuleuven.be">Klaas Kelchtermans</author>

  
  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <!-- <run_depend>bebop_msgs</run_depend> -->
  


</package>
